# sm_legacy_re

./: CMakeLists.txt  README.md
api/: CMakeLists.txt
api/include/: hook.h  imod.h  memory.h  modmanager.h  sm.h
api/src/: hook.cpp  memory.cpp  modmanager.cpp  sm.cpp
examplemod/: CMakeLists.txt
examplemod/include/: modmain.h  modmeta.h
examplemod/src/: modmain.cpp
loader/: CMakeLists.txt
loader/include/: loader.h
loader/include/hooks/: allocconsole.h
loader/src/: dllmain.cpp  loader.cpp
loader/src/hooks/: allocconsole.cpp
proxy/: CMakeLists.txt  version.def
proxy/include/: bootstrapper.h  proxy.h
proxy/src/: bootstrapper.cpp  dllmain.cpp  proxy.cpp
